feat(pizzabaecker) : add pizzabaecker.php page

--- a/src/Praktikum/Prak1/pizzabaecker.html
+++ b/src/Praktikum/Prak1/pizzabaecker.html
@@ -9,8 +9,9 @@
     <title>1337_Pizza: Pizzabäcker</title>
   </head>
   <body>
-    <h2>Pizza Bestellstatus</h2>
-    <table border="0">
+    <section id="bestellungen">
+      <h1>Pizza Bestellstatus</h1>
+      <table border="0">
         <tr>
           <th>Pizza</th>
           <th>bestellt</th>
@@ -19,28 +20,29 @@
         </tr>
         <tr>
           <td>Margherita</td>
-          <td><input type="radio" name="margherita_status"></td>
-          <td><input type="radio" name="margherita_status"></td>
-          <td><input type="radio" name="margherita_status"></td>
+          <td><input type="radio" value="bestellt" name="margherita_status" /></td>
+          <td><input type="radio" value="im_Ofen" name="margherita_status" /></td>
+          <td><input type="radio" value="fertig" name="margherita_status" /></td>
         </tr>
         <tr>
           <td>Tonno</td>
-          <td><input type="radio" name="tonno_status"></td>
-          <td><input type="radio" name="tonno_status"></td>
-          <td><input type="radio" name="tonno_status"></td>
+          <td><input type="radio" name="tonno_status" /></td>
+          <td><input type="radio" name="tonno_status" /></td>
+          <td><input type="radio" name="tonno_status" /></td>
         </tr>
         <tr>
           <td>Prosciutto</td>
-          <td><input type="radio" name="prosciutto_status"></td>
-          <td><input type="radio" name="prosciutto_status"></td>
-          <td><input type="radio" name="prosciutto_status"></td>
+          <td><input type="radio" name="prosciutto_status" /></td>
+          <td><input type="radio" name="prosciutto_status" /></td>
+          <td><input type="radio" name="prosciutto_status" /></td>
         </tr>
         <tr>
-            <td>Salami</td>
-            <td><input type="radio" name="salami_status"></td>
-            <td><input type="radio" name="salami_status"></td>
-            <td><input type="radio" name="salami_status"></td>
-          </tr>
+          <td>Salami</td>
+          <td><input type="radio" name="salami_status" /></td>
+          <td><input type="radio" name="salami_status" /></td>
+          <td><input type="radio" name="salami_status" /></td>
+        </tr>
       </table>
+    </section>
   </body>
 </html>
