fix(Baecker) : fix showing status with checked button

--- a/src/Praktikum/Prak1/pizzabaecker.html
+++ b/src/Praktikum/Prak1/pizzabaecker.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
           <td>Margherita</td>
-          <td><input type="radio" value="bestellt" name="margherita_status" /></td>
+          <td><input type="radio" value="bestellt" checked name="margherita_status" /></td>
           <td><input type="radio" value="im_Ofen" name="margherita_status" /></td>
           <td><input type="radio" value="fertig" name="margherita_status" /></td>
         </tr>
