Refactor(pizzabaecker) : W3C validator still has one error because of not using CSS.

--- a/src/Praktikum/Prak1/pizzabaecker.html
+++ b/src/Praktikum/Prak1/pizzabaecker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <!-- für später: CSS include -->
     <!-- <link rel="stylesheet" href="XXX.css"/> -->
     <!-- für später: JavaScript include -->
@@ -20,27 +20,27 @@
         </tr>
         <tr>
           <td>Margherita</td>
-          <td><input type="radio" value="bestellt" checked name="margherita_status" /></td>
-          <td><input type="radio" value="im_Ofen" name="margherita_status" /></td>
-          <td><input type="radio" value="fertig" name="margherita_status" /></td>
+          <td><input type="radio" value="bestellt" name="margherita_status"></td>
+          <td><input type="radio" value="im_Ofen" name="margherita_status"></td>
+          <td><input type="radio" value="fertig" name="margherita_status"></td>
         </tr>
         <tr>
           <td>Tonno</td>
-          <td><input type="radio" name="tonno_status" /></td>
-          <td><input type="radio" name="tonno_status" /></td>
-          <td><input type="radio" name="tonno_status" /></td>
+          <td><input type="radio" value="bestellt" name="tonno_status"></td>
+          <td><input type="radio" value="im_Ofen" name="tonno_status"></td>
+          <td><input type="radio" value="fertig" name="tonno_status"></td>
         </tr>
         <tr>
           <td>Prosciutto</td>
-          <td><input type="radio" name="prosciutto_status" /></td>
-          <td><input type="radio" name="prosciutto_status" /></td>
-          <td><input type="radio" name="prosciutto_status" /></td>
+          <td><input type="radio" value="bestellt" name="prosciutto_status"></td>
+          <td><input type="radio" value="im_Ofen" name="prosciutto_status"></td>
+          <td><input type="radio" value="fertig" name="prosciutto_status"></td>
         </tr>
         <tr>
           <td>Salami</td>
-          <td><input type="radio" name="salami_status" /></td>
-          <td><input type="radio" name="salami_status" /></td>
-          <td><input type="radio" name="salami_status" /></td>
+          <td><input type="radio" value="bestellt" name="salami_status"></td>
+          <td><input type="radio" value="im_Ofen" name="salami_status"></td>
+          <td><input type="radio" value="fertig" name="salami_status"></td>
         </tr>
       </table>
     </section>
